--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.3.1",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "graphql": "^14.1.1",
     "react": "^16.8.3",
+    "react-apollo": "^2.5.1",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
   },
   "scripts": {
